--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,21 +9,24 @@ html {
 	width: 100%;
 	height: 100vh;
 	background-size: 300%;
+
+
+	/*
 	background-image: linear-gradient(
 		-90deg,
-		/*
-		rgb(73, 165, 150) 0%,
-		rgb(52, 159, 201) 25%,
-		rgb(92, 122, 204) 51%,
-		rgb(107, 99, 214) 100%
-		*/
+		
+		//rgb(73, 165, 150) 0%,
+		//rgb(52, 159, 201) 25%,
+		//rgb(92, 122, 204) 51%,
+		//rgb(107, 99, 214) 100%
+		
 		rgb(12, 10, 36) 0%,
 		rgb(2, 8, 80) 25%,
 		rgb(32, 6, 90) 51%,
 		rgb(42, 1, 105) 100%
 	);
 	animation: AnimateBG 10s ease infinite;
-
+	*/
 
 }
 
