--- a/components/SelectedCard/index.module.css
+++ b/components/SelectedCard/index.module.css
@@ -41,9 +41,9 @@
 
   /*border:1px solid #efefef;*/
   
-  position:relative;
-  float:left;
-  margin:20px;
+  //position:relative;
+  //float:left;
+  margin:10px;
 
 }
 .squareflip{
@@ -54,8 +54,8 @@
   width:100%;
   height:100%;
 }
-.square{
 
+.square{
   background-size: cover;
   background-position:center center;
 
@@ -66,7 +66,6 @@
 
   position:absolute;
   top:0;
-
 
   -webkit-backface-visibility: hidden; 
   backface-visibility: hidden;
@@ -79,6 +78,7 @@
   transform: rotateY(0deg);
   transform-style: preserve-3d;
   z-index:1;
+  border-width: 1px;
 }
 .squareflip:hover .square{
   -webkit-transform: rotateY(-180deg);
@@ -269,9 +269,9 @@
 
 /*You can delete this style*/
 .centerflipcards{
-  display:block;
-  width:1330px;
-  height:440px;
+  //display:block;
+  //width:1330px;
+  //height:440px;
   text-align:center;
   margin:0 auto;
   margin-top:25px;
