--- a/components/SelectedCard/index.module.css
+++ b/components/SelectedCard/index.module.css
@@ -39,22 +39,21 @@
   -ms-transform-style: preserve-3d; 
   transform-style: preserve-3d; 
 
-  /*border:1px solid #efefef;*/
+  //border:1px solid #efefef;
   
-  //position:relative;
-  //float:left;
-  margin:10px;
+  position:relative;
+  float:left;
+  margin:0px;
 
 }
 .squareflip{
-  width:400px;
-  height:400px;
+  width:280px;
+  height:350px;
 }
 .square,.square2{
   width:100%;
   height:100%;
 }
-
 .square{
   background-size: cover;
   background-position:center center;
@@ -78,7 +77,6 @@
   transform: rotateY(0deg);
   transform-style: preserve-3d;
   z-index:1;
-  border-width: 1px;
 }
 .squareflip:hover .square{
   -webkit-transform: rotateY(-180deg);
@@ -126,7 +124,9 @@
 
 /*Square content*/
 .squarecontainer{
-  padding:40px;
+  //border:1px solid #efefef;
+
+  padding:30px;
   text-align:center;
   position:relative;
   top:50%;
@@ -269,12 +269,16 @@
 
 /*You can delete this style*/
 .centerflipcards{
-  //display:block;
-  //width:1330px;
-  //height:440px;
+  
+  display:block;
+  width:1330px;
+  height:440px;
   text-align:center;
   margin:0 auto;
   margin-top:25px;
+  
+
+  //display:block;
 }
 .clearfix{clear:both;}
 .centerflipcards p{
