--- a/components/SelectedCard/index.module.css
+++ b/components/SelectedCard/index.module.css
@@ -47,7 +47,8 @@
 
 }
 .squareflip{
-  width:280px;
+  ///border:2px solid #efefef;
+  width:350px;
   height:350px;
 }
 .square,.square2{
@@ -188,7 +189,7 @@
   color:white;
   font-family: "Open Sans";
   font-weight:700;
-  font-size:20px;
+  font-size:16px;
 }
 .squareflip h3{
   color:white;
@@ -200,7 +201,8 @@
 /*Elements*/
 .flipoverlay{
   display:block;
-  background:rgba(0,0,0,0.5);
+  //background:rgba(0,0,0,0.5);
+  background:rgba(0,0,0,0.0);
   width:100%;
   height:100%;
   position:absolute;
@@ -241,11 +243,13 @@
   -webkit-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
   -moz-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
   box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+
 }
 .squareflip .square .textshadow{
   -webkit-text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
   -moz-text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
   text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+
 }
 .squareflip:hover .square .boxshadow, .squareflip:hover .square .textshadow{
   -webkit-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
@@ -268,6 +272,7 @@
   -webkit-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
   -moz-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
   box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
+
 }
 
 
@@ -281,8 +286,6 @@
   margin:0 auto;
   margin-top:25px;
   
-
-  //display:block;
 }
 .clearfix{clear:both;}
 .centerflipcards p{
