--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,12 @@
 /* Animating Background Gradient */
 html {
 
+	/*
 	background-position: top;
 	width: 100%;
 	height: 100vh;
 	background-size: 300%;
-
+	*/
 
 	/*
 	background-image: linear-gradient(
@@ -48,10 +49,12 @@ img {
 	object-fit: cover;
 	object-position: center;
 }
+
 /* header title */
 h1 {
 	animation: glow 2s ease-in-out infinite alternate;
 }
+
 @keyframes glow {
 	from {
 		text-shadow: 5px 0 10px #0000002d;
@@ -62,3 +65,6 @@ h1 {
 	}
 }
 /*  */
+
+
+
