--- a/components/SelectedCard/index.module.css
+++ b/components/SelectedCard/index.module.css
@@ -193,13 +193,13 @@
 /*Style text*/
 .squareflip h2{
   color:white;
-  font-family: "Open Sans";
+  font-family: "zeroesone";
   font-weight:700;
   font-size:15px;
 }
 .squareflip h3{
   color:white;
-  font-family: "Open Sans";
+  font-family: "zeroesone";
   font-weight:500;
   font-size:15px;
   line-height:26px;
