--- a/components/GameHeader/index.module.css
+++ b/components/GameHeader/index.module.css
@@ -1,7 +1,7 @@
 
 .number{
     font-family: "Iceland Regular";
-    color: white;
+    color: rgb(251 191 36);
     font-weight:500;
     font-size:45px;
 }
