--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,8 +94,17 @@ body {
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'Zeroes One';
+	font-family: 'LINESeedKR-Bd';
 }
+
+
+@font-face {
+    font-family: 'LINESeedKR-Bd';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+
 
 
 @font-face {
