number size change

--- a/components/GameCard/index.module.css
+++ b/components/GameCard/index.module.css
@@ -40,8 +40,8 @@
 
 
 .number{
-    font-family: "Iceland Regular";
+    font-family: "LINESeedKR-Bd";
     font-weight:100;
-    font-size:18px;
+    font-size:12px;
     text-align: right;
 }
