--- a/components/GameHeader/index.module.css
+++ b/components/GameHeader/index.module.css
@@ -1,9 +1,9 @@
 
 .number{
-    font-family: "Iceland Regular";
+    font-family: "LINESeedKR-Bd";
     color: rgb(251 191 36);
     font-weight:500;
-    font-size:45px;
+    font-size:35px;
 }
 
 .squareflip{
