--- a/components/SelectedCard/index.module.css
+++ b/components/SelectedCard/index.module.css
@@ -39,21 +39,27 @@
   -ms-transform-style: preserve-3d; 
   transform-style: preserve-3d; 
 
-  //border:1px solid #efefef;
+  //border:7px solid #efefef;
   
   //position:relative;
   //float:left;
   //margin:0px;
 
-  position:relative;
-  float:left;
-  margin:0px;
+  //position:relative;
+  //float:center;
+  //margin:0px;
+
+  //display: flex;
+  //justify-content: right;
+
+
 
 }
 .squareflip{
-  //border:2px solid #efefef;
-  width:350px;
-  height:350px;
+
+  //border:5px solid #efefef;
+  //width:350px;
+  height:500px;
   //width:100%;
   //height:100%;
 }
