--- a/components/SelectedCard/index.module.css
+++ b/components/SelectedCard/index.module.css
@@ -60,15 +60,19 @@
   //border:5px solid #efefef;
   //width:350px;
   
-  height:350px;
+  height:700px;
 
   //width:100%;
   //height:100%;
+
+  
 }
 .square,.square2{
   //border: 2px solid #efefef;
   width: 100%;
-  height: 100%;
+  height: 70%;
+
+  margin-top:20px;
 }
 .square{
   background-size: cover;
