--- a/components/GameCardStaked/index.module.css
+++ b/components/GameCardStaked/index.module.css
@@ -1,285 +1,47 @@
-.bg{
-  background-color: #1e1f26;
-  height: 100vh;
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to { 
+        transform: rotate(360deg);
+    }
 }
-.level{
-  background-color: #00d1b2;
-  padding: 5rem 0;
-  color: #ffffff;
-  margin: 0!important;
-}
+ 
 
-.title{
-  color: inherit;
-  width: 200px;
-  height: 36px;
+ @-webkit-keyframes rotate {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to { 
+        -webkit-transform: rotate(360deg);
+    }
 }
 
-
-
-
-
-.squareflip{
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  -ms-perspective: 1000;
-  perspective: 1000;
-
-  -webkit-transform: perspective(1000px);
-  -moz-transform: perspective(1000px);
-  -ms-transform: perspective(1000px);
-  transform: perspective(1000px);
-
-  -webkit-transform-style: preserve-3d; 
-  -moz-transform-style: preserve-3d; 
-  -ms-transform-style: preserve-3d; 
-  transform-style: preserve-3d; 
-
-  /*border:1px solid #efefef;*/
-  
-  position:relative;
-  float:left;
-  margin:20px;
-
-}
-.squareflip{
-  width:400px;
-  height:400px;
-}
-.square,.square2{
-  width:100%;
-  height:100%;
-}
-.square{
-
-  background-size: cover;
-  background-position:center center;
-
-  -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  overflow: hidden;
-
-  position:absolute;
-  top:0;
-
-
-  -webkit-backface-visibility: hidden; 
-  backface-visibility: hidden;
-}
-.squareflip .square{
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-  transform-style: preserve-3d;
-  z-index:1;
-}
-.squareflip:hover .square{
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-  transform-style: preserve-3d;
+.load {
+	//width: 100px;
+	//height: 100px;
+	//margin: 110px auto 0;
+	border:solid 10px #8822aa;
+	border-radius: 50%;
+	border-right-color: transparent;
+	border-bottom-color: transparent;
+	-webkit-transition: all 0.5s ease-in;
+    -webkit-animation-name:             rotate; 
+    -webkit-animation-duration:         1.0s; 
+    -webkit-animation-iteration-count:  infinite;
+    -webkit-animation-timing-function: linear;
+    	
+    transition: all 0.5s ease-in;
+    animation-name:             rotate; 
+    animation-duration:         5.0s; 
+    animation-iteration-count:  infinite;
+    animation-timing-function: linear; 
 }
 
 
-.square2{
-
-  background-size: cover;
-  background-position:center center;
-
-  -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  overflow: hidden;
-
-  position:absolute;
-  top:0;
-
-  -webkit-backface-visibility: hidden; 
-  backface-visibility: hidden;
-}
-.squareflip .square2{
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-  transform-style: preserve-3d;
-  z-index:1;
-}
-.squareflip:hover .square2{
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-  transform-style: preserve-3d;
-}
-
-/*Square content*/
-.squarecontainer{
-  padding:40px;
-  text-align:center;
-  position:relative;
-  top:50%;
-
-  -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-
-
-  -webkit-transform: translateY(-50%) translateX(0px)  scale(1);
-  -ms-transform: translateY(-50%) translateX(0px)  scale(1);
-  transform: translateY(-45%) translateX(0px)  scale(1);
-  transform-style: preserve-3d;
-  z-index:2;
-}
-.squareflip:hover .squarecontainer{
-  
-  -webkit-transform: translateY(-50%) translateX(-650px)  scale(.88);
-  -ms-transform: translateY(-50%) translateX(-650px)  scale(.88);
-  transform: translateY(-50%) translateX(-650px)  scale(.88);
-  transform-style: preserve-3d;
-
-}
-
-.squarecontainer2{
-  padding:40px;
-  text-align:center;
-  position:relative;
-  top:50%;
-
-  -ms-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-  -webkit-transition: transform 0.60s cubic-bezier(.5,.3,.3,1);
-
-  
-  -webkit-transform: translateY(-50%) translateX(650px) translateZ(60px) scale(.88);
-  -ms-transform: translateY(-50%) translateX(650px) translateZ(60px) scale(.88);
-  transform: translateY(-50%) translateX(650px) translateZ(60px) scale(.88);
-
-  transform-style: preserve-3d;
-  z-index:2;
-}
-.squareflip:hover .squarecontainer2{
-  
-  -webkit-transform: translateY(-50%) translateX(0px) translateZ(0px) scale(1);
-  -ms-transform: translateY(-50%) translateX(0px) translateZ(0px) scale(1);
-  transform: translateY(-50%) translateX(0px) translateZ(0px) scale(1);
-  transform-style: preserve-3d;
-}
-
-
-
-/*Style text*/
-.squareflip h2{
-  color:white;
-  font-family: "Open Sans";
-  font-weight:700;
-  font-size:20px;
-}
-.squareflip h3{
-  color:white;
-  font-family: "Open Sans";
-  font-weight:500;
-  font-size:16px;
-  line-height:26px;
-}
-/*Elements*/
-.flipoverlay{
-  display:block;
-  background:rgba(0,0,0,0.5);
-  width:100%;
-  height:100%;
-  position:absolute;
-  top:0;
-}
-.aligncenter{
-  margin:0 auto;
-}
-.kallyas-button{
-  display:block;
-  width:160px;
-  padding:18px 30px;
-  font-family:"Open Sans";
-  font-weight:600;
-  color:#fff;
-  background:#FF2024;
-  margin:0 auto;
-  border-radius:2px;
-  text-decoration:none;
-
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffa067+0,ff2959+49,ff2024+100 */
-  background: #ffa067; /* Old browsers */
-  background: -moz-linear-gradient(-45deg,  #ffa067 0%, #ff2959 49%, #ff2024 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg,  #ffa067 0%,#ff2959 49%,#ff2024 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg,  #ffa067 0%,#ff2959 49%,#ff2024 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa067', endColorstr='#ff2024',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
-
-
-/*ADD SHADOWS OPTIONAL*/
-.squareflip .square .boxshadow, .squareflip .square .textshadow, .squareflip .square2 .boxshadow, .squareflip .square2 .textshadow{
-  -ms-transition: 0.60s;
-      transition: 0.60s;
-      -webkit-transition: 0.60s;
-}
-
-.squareflip .square .boxshadow{
-  -webkit-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-  -moz-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-  box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-}
-.squareflip .square .textshadow{
-  -webkit-text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-  -moz-text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-  text-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-}
-.squareflip:hover .square .boxshadow, .squareflip:hover .square .textshadow{
-  -webkit-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-  -moz-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-  box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-}
-
-
-.squareflip .square2 .boxshadow{
-  -webkit-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-  -moz-box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-  box-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-}
-.squareflip .square2 .textshadow{
-  -webkit-text-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-  -moz-text-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-  text-shadow: 240px 42px 58px -8px rgba(0,0,0,0.0);
-}
-.squareflip:hover .square2 .boxshadow, .squareflip:hover .square2 .textshadow{
-  -webkit-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-  -moz-box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-  box-shadow: 24px 42px 58px -8px rgba(0,0,0,0.3);
-}
-
-
-/*You can delete this style*/
-.centerflipcards{
-  display:block;
-  width:1330px;
-  height:440px;
-  text-align:center;
-  margin:0 auto;
-  margin-top:25px;
-}
-.clearfix{clear:both;}
-.centerflipcards p{
-    font-family:"Open Sans";
-    font-size:13px;
-    margin-top:10px;
-    font-weight:700;
+.number{
+    font-family: "LINESeedKR-Bd";
+    font-weight:100;
+    font-size:12px;
+    text-align: right;
 }
